Don't modify running balance when hiding reconciled transactions globally

BUG: 508033
FIXED-IN: 5.2.2